--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -20,6 +20,8 @@
   border-top: 10px solid transparent;
   border-bottom: 10px solid transparent;
   border-right: 15px solid var(--container-color);
+  position: absolute;
+  left: -0.93rem;
   top: 20%;
 }
 .about__description {
