--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -86,3 +86,21 @@
   opacity: 1;
   transform: translateY(0);
 }
+@media screen and (max-width: 1024px) {
+  .work__filters {
+    justify-content: center;
+  }
+  .work__container {
+    grid-template-columns: repeat(2, 330px);
+    justify-content: center;
+    row-gap: 1.875rem;
+  }
+}
+@media screen and (max-width: 768px) {
+  .work__container {
+    grid-template-columns: 310px;
+  }
+  .work__filter {
+    row-gap: 0.25rem;
+  }
+}
