--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -58,3 +58,8 @@
     text-align: center;
   }
 }
+@media screen and (max-width: 350fr) {
+  contact__container {
+    grid-template-columns: 1fr;
+  }
+}
