--- a/src/index.css
+++ b/src/index.css
@@ -107,8 +107,7 @@ img {
   padding-top: 7rem;
   padding-bottom: 2rem;
 }
-
-.section_title {
+.section__title {
   font-size: var(--h1-font-size);
   margin-left: 0.875rem;
   font-weight: var(--font-bold);
@@ -116,7 +115,7 @@ img {
   margin-bottom: 3.75rem;
 }
 
-.section_title::before {
+.section__title::before {
   content: " ";
   background: url(./assets/dots-bg.svg);
   height: 2.25rem;
